{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "TacticalCombat",
            "id": "f08e46e4-04c8-414c-a00e-2482dfa41636",
            "actions": [
                {
                    "name": "EndTurn",
                    "type": "Button",
                    "id": "a4118021-28f9-4ee3-ae4e-2b1655fa707b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UnitMove",
                    "type": "Button",
                    "id": "0f8b89ed-e9dd-492a-b702-d0b4bd158803",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "367e6757-d0bc-4fc2-bdb8-802f3ff5073e",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "EndTurn",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e326f03-2c90-463b-801e-1b1f5417e0aa",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "UnitMove",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}